<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/ablWeeks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvProfileTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.Toolbar>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clStaticContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                app:layout_constraintTop_toBottomOf="@+id/ablWeeks">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCurrentCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/btnChangeCurrentCourse"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="HSK1" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnChangeCurrentCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:src="@drawable/ic_change_course"
                    app:layout_constraintBottom_toBottomOf="@+id/tvCurrentCourse"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCurrentCourse"
                    app:layout_constraintTop_toTopOf="@+id/tvCurrentCourse" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLearnedWordTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/text_learned_word_title"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/tvLearnedWord"
                    app:layout_constraintStart_toStartOf="@+id/tvCurrentCourse"
                    app:layout_constraintTop_toBottomOf="@+id/tvCurrentCourse" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLearnedWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tvLearnedWordTitle"
                    app:layout_constraintEnd_toStartOf="@id/tvFailedWordTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvLearnedWordTitle"
                    app:layout_constraintTop_toTopOf="@+id/tvLearnedWordTitle"
                    tools:text="200" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFailedWordTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:text="@string/text_failed_word_title"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tvLearnedWordTitle"
                    app:layout_constraintEnd_toStartOf="@id/tvFailedWord"
                    app:layout_constraintStart_toEndOf="@+id/tvLearnedWord"
                    app:layout_constraintTop_toTopOf="@+id/tvLearnedWordTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFailedWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tvLearnedWordTitle"
                    app:layout_constraintEnd_toEndOf="@+id/btnChangeCurrentCourse"
                    app:layout_constraintStart_toEndOf="@+id/tvFailedWordTitle"
                    app:layout_constraintTop_toTopOf="@+id/tvLearnedWordTitle"
                    tools:text="20" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/vDividerStatic"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/clStaticContainer"
                app:layout_constraintTop_toBottomOf="@+id/clStaticContainer" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clYourListContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                app:layout_constraintTop_toBottomOf="@+id/vDividerStatic">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/text_your_list_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/appCompatButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/appCompatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:text="@string/text_show_all_button"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/appCompatTextView" />

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
                    app:singleLine="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_chip_empty"
                        app:chipEndPadding="4dp"
                        app:chipStartPadding="4dp" />
                </com.google.android.material.chip.ChipGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/vDividerList"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/clYourListContainer"
                app:layout_constraintTop_toBottomOf="@+id/clYourListContainer" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clReminderSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                app:layout_constraintTop_toBottomOf="@id/vDividerList">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvReminderSetting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/text_reminder_settings_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDailyReminderTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_daily_reminder_title"
                    app:layout_constraintEnd_toStartOf="@+id/swDailyReminder"
                    app:layout_constraintStart_toStartOf="@+id/tvReminderSetting"
                    app:layout_constraintTop_toBottomOf="@+id/tvReminderSetting" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/swDailyReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvDailyReminderTitle"
                    app:layout_constraintEnd_toEndOf="@+id/tvReminderSetting"
                    app:layout_constraintTop_toTopOf="@+id/tvDailyReminderTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDailyReminderTimeTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_daily_reminder_time_title"
                    app:layout_constraintEnd_toStartOf="@+id/swDailyReminder"
                    app:layout_constraintStart_toStartOf="@+id/tvReminderSetting"
                    app:layout_constraintTop_toBottomOf="@+id/tvDailyReminderTitle" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tvDailYReminderTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvDailyReminderTimeTitle"
                    app:layout_constraintEnd_toEndOf="@+id/tvReminderSetting"
                    app:layout_constraintTop_toTopOf="@+id/tvDailyReminderTimeTitle"
                    tools:text="11:00 AM" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/vDividerReminder"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/clReminderSetting"
                app:layout_constraintTop_toBottomOf="@+id/clReminderSetting" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                app:layout_constraintTop_toBottomOf="@+id/vDividerReminder">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSpeechSetting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/text_reminder_settings_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPinyinOnStartTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_display_pinyin_on_start_title"
                    app:layout_constraintEnd_toStartOf="@+id/swPinyinOnStart"
                    app:layout_constraintStart_toStartOf="@+id/tvSpeechSetting"
                    app:layout_constraintTop_toBottomOf="@+id/tvSpeechSetting" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/swPinyinOnStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvPinyinOnStartTitle"
                    app:layout_constraintEnd_toEndOf="@+id/tvSpeechSetting"
                    app:layout_constraintTop_toTopOf="@+id/tvPinyinOnStartTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPChineseOnStartTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_display_chinese_on_start_title"
                    app:layout_constraintEnd_toStartOf="@+id/swChineseOnStart"
                    app:layout_constraintStart_toStartOf="@+id/tvSpeechSetting"
                    app:layout_constraintTop_toBottomOf="@+id/tvPinyinOnStartTitle" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/swChineseOnStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvPChineseOnStartTitle"
                    app:layout_constraintEnd_toEndOf="@+id/tvSpeechSetting"
                    app:layout_constraintTop_toTopOf="@+id/tvPChineseOnStartTitle" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPAudioOnStartTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_display_chinese_on_start_title"
                    app:layout_constraintEnd_toStartOf="@+id/swAudioOnStart"
                    app:layout_constraintStart_toStartOf="@+id/tvSpeechSetting"
                    app:layout_constraintTop_toBottomOf="@+id/tvPChineseOnStartTitle" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/swAudioOnStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvPAudioOnStartTitle"
                    app:layout_constraintEnd_toEndOf="@+id/tvSpeechSetting"
                    app:layout_constraintTop_toTopOf="@+id/tvPAudioOnStartTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>